landing-section now stays fixed, about section eventually covers it. cool

--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -44,23 +44,40 @@ a:hover
 #landing-section
   padding-top: 80px
   height: 100vh
+
+#landing-background
+  position: fixed
+  z-index: -10
+  width: 100%
+  height: 100%
+  img
+    width: 100%
+    height: 100%
+    z-index: -20
+
+#landing-background::after
+  content: ""
+  position: absolute
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  background: linear-gradient( to right, rgba(0, 0, 0, 0.5), rgba(6,47,79, 0.5), rgba(129,55,114, 0.5), rgba(184,38,1, 0.5))
+
+#landing-content
+  height: 100vh
   color: white
   text-align: center
-  position: relative
+  position: fixed
+  z-index: -5
 
   h1
     margin-top: 5vh
     @media (max-width: 767px)
       margin-top: 10vh
 
-#landing-background
-  position: fixed
-  width: 100%
-  height: 100%
-  z-index: -10
-  background: linear-gradient( to right, rgba(0, 0, 0, 0.5), rgba(6,47,79, 0.5), rgba(129,55,114, 0.5), rgba(184,38,1, 0.5)), url("../images/background2-min.jpg")
-  background-position: center
-  background-size: cover
+
+
 
 .profile-pic
   margin: 10vh auto
